--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
     <div class="container">
         <div class="row w-100 align-items-center">
             <div class="col text-white">
-                CA: 1343546431654321654321654514134.
+                CA: EdhBcPn1QvQttUtVNmY3foH6PHQrnVLmk7yxugJWrBLV
             </div>
             <div class="col text-right">
-<a href="https://example.com" target="_blank" 
+<a href="https://believe.app/coin/EdhBcPn1QvQttUtVNmY3foH6PHQrnVLmk7yxugJWrBLV" target="_blank" 
    class="btn btn-success btn-sm">
    Support WEB2FA Token
 
