--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
     <div class="container">
         <div class="row w-100 align-items-center">
             <div class="col text-white">
-                CA: EdhBcPn1QvQttUtVNmY3foH6PHQrnVLmk7yxugJWrBLV
+                CA: HWmtMmvGjVBhEmPiZo5KaNiPRT7BSRRigZihqNDmwBLV
             </div>
             <div class="col text-right">
-<a href="https://believe.app/coin/EdhBcPn1QvQttUtVNmY3foH6PHQrnVLmk7yxugJWrBLV" target="_blank" 
+<a href="#" target="_blank" 
    class="btn btn-success btn-sm">
-   Support WEB2FA Token
+   Support WEB32FA Token
 
                 </a>
             </div>
